@@ -121,3 +121,4 @@ v0.7.5
 * blockcheck2: check http3 with ipv6 exthdr
 * github actions: separate target arm-old with LUA classic, not JIT
 * zapret-auto: iff/neg in repeater
+* zapret-antidpi: multidisorder_legacy
